--- a/package.json
+++ b/package.json
@@ -19,27 +19,27 @@
   },
   "dependencies": {},
   "devDependencies": {
-    "@fortawesome/fontawesome-svg-core": "^6.4.0",
-    "@fortawesome/free-solid-svg-icons": "^6.4.0",
-    "@fortawesome/react-fontawesome": "^0.2.0",
     "@reduxjs/toolkit": "^1.9.3",
+    "@types/react": "^18.2.14",
     "@types/react-dom": "^18.0.11",
     "@types/react-helmet": "^6.1.6",
-    "@types/react": "^18.2.14",
-    "@types/styled-components": "^5.1.26",
     "@types/react-redux": "^7.1.25",
+    "@types/react-transition-group": "^4.4.6",
+    "@types/styled-components": "^5.1.26",
+    "@vitejs/plugin-react": "^4.0.2",
     "date-fns": "^2.29.3",
+    "react": "18.2.0",
     "react-dnd": "^16.0.1",
-    "react-dom": "^18.2.0",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dom": "^18.2.0",
     "react-helmet": "^6.1.0",
     "react-redux": "^8.0.5",
     "react-tooltip": "^5.10.6",
-    "react": "18.2.0",
-    "typescript": "5.1.6",
-    "styled-components": "6.0.2",
+    "react-transition-group": "^4.4.5",
     "redux-devtools-extension": "^2.13.9",
     "redux-saga": "^1.2.3",
+    "styled-components": "6.0.2",
+    "typescript": "5.1.6",
     "vite": "^4.2.1"
   }
 }
